# tictactoe_Sun_Yuxi

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/tictactoe_ys3874/: __init__.py  tictactoe_ys3874.py
tests/: test_tictactoe_ys3874.py
