[tool.poetry]
name = "tictactoe_ys3874"
version = "1.1.0"
description = "Yuxi's hw7 of building a package"
authors = ["Yuxi_Sun"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.3.3"
sphinx-rtd-theme = "^3.0.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
